--- a/BeaconWaveLoading/Base.lproj/Main.storyboard
+++ b/BeaconWaveLoading/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="405"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yux-nn-ZRF" userLabel="WaveLoadingIndicator" customClass="WaveLoadingIndicator" customModule="MinewBeaconDemo" customModuleProvider="target">
+                                <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yux-nn-ZRF" userLabel="WaveLoadingIndicator" customClass="WaveLoadingIndicator" customModule="BeaconWaveLoading" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="-10" width="375" height="414"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </containerView>
@@ -32,7 +32,7 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="27"/>
-                                    <textInputTraits key="textInputTraits"/>
+                                    <textInputTraits key="textInputTraits" smartInsertDeleteType="no"/>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GAc-d6-518">
                                     <rect key="frame" x="119" y="77" width="137" height="30"/>
@@ -52,11 +52,11 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="ps1-Yc-WkW" firstAttribute="centerX" secondItem="k6y-0m-XoR" secondAttribute="centerX" id="33n-nK-upS"/>
-                                <constraint firstItem="Yux-nn-ZRF" firstAttribute="top" secondItem="k6y-0m-XoR" secondAttribute="top" constant="-20" id="6qn-5O-ClE"/>
+                                <constraint firstItem="Yux-nn-ZRF" firstAttribute="top" secondItem="k6y-0m-XoR" secondAttribute="top" constant="-5" id="6qn-5O-ClE"/>
                                 <constraint firstItem="l2k-W8-Jvf" firstAttribute="top" secondItem="ps1-Yc-WkW" secondAttribute="bottom" constant="70" id="WBw-VE-WdW"/>
                                 <constraint firstItem="Yux-nn-ZRF" firstAttribute="centerY" secondItem="ps1-Yc-WkW" secondAttribute="centerY" id="Xbm-Un-8yW"/>
                                 <constraint firstItem="Yux-nn-ZRF" firstAttribute="centerX" secondItem="l2k-W8-Jvf" secondAttribute="centerX" id="Y0Z-NJ-siS"/>
-                                <constraint firstItem="Yux-nn-ZRF" firstAttribute="width" secondItem="k6y-0m-XoR" secondAttribute="width" constant="-10" id="ZVW-G4-dsE"/>
+                                <constraint firstItem="Yux-nn-ZRF" firstAttribute="width" secondItem="k6y-0m-XoR" secondAttribute="width" constant="-35" id="ZVW-G4-dsE"/>
                                 <constraint firstItem="l2k-W8-Jvf" firstAttribute="centerX" secondItem="k6y-0m-XoR" secondAttribute="centerX" id="eVK-fD-fB9"/>
                                 <constraint firstItem="ps1-Yc-WkW" firstAttribute="centerY" secondItem="k6y-0m-XoR" secondAttribute="centerY" id="glZ-o2-4hb"/>
                                 <constraint firstItem="GAc-d6-518" firstAttribute="bottom" secondItem="ps1-Yc-WkW" secondAttribute="top" constant="-70" id="kQL-kg-Isf"/>
@@ -82,6 +82,17 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="VQB-fv-XeF">
                         <nil key="title"/>
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="EW5-OC-l2n">
+                            <textField key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="top" text="Wave Loading Beacon" textAlignment="natural" minimumFontSize="17" id="mqo-ri-B8V">
+                                <rect key="frame" x="0.0" y="0.0" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
                         <rightBarButtonItems>
                             <barButtonItem systemItem="play" id="2oi-GN-XUD">
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
